# SeraphyAgent

./: .gitignore  .vercelignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
public/data/: categories.json  promptmasters.json  prompts.json  skills.json  summary.json  tags.json
public/skills/0xdaxiongya/clawstead/: _meta.json  skill.md
public/skills/0xnagato/antigravity-swarm/: _meta.json
public/skills/0xnagato/captcha/: SKILL.md  _meta.json
public/skills/0xnagato/hustle/: _meta.json
public/skills/0xnagato/orchestrator/: SKILL.md  _meta.json
public/skills/0xnagato/skill-porter/: CONTRIBUTING.md  GEMINI.md  README.md  TEST_RESULTS.md  _meta.json  gemini-extension.json  package.json
public/skills/clawcolab/clawbrain/: README.md  SKILL.md  __init__.py  _meta.json  pyproject.toml  skill.json
public/skills/clawcolab/clawbrain/brain/: README.md  __init__.py  clawbrain.py
scripts/: add-images.mjs
seraphy_neural_core/: consciousness_stream.py  decision_cortex.py  emotional_state.py  language_processor.py  memory_matrix.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/promptmasters/: PromptmastersClient.tsx  page.tsx
src/app/prompts/: PromptsClient.tsx  page.tsx
src/app/skills/: SkillsClient.tsx  page.tsx
src/components/: ChatWindow.tsx  Footer.tsx  Loading.tsx  Navbar.tsx  PromptCard.tsx  SearchBar.tsx  SeraphyChatModal.tsx  SeraphyChatWidget.tsx  SkillCard.tsx
src/context/: AuthContext.tsx
src/hooks/: useBookmarks.tsx  useSkills.tsx
src/lib/: categoryUtils.ts  data.ts  openrouter.ts
src/types/: index.ts
(+1910 files in other folders)
