[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawbrain"
version = "3.0.0"
description = "ClawBrain - Personal AI Memory System for AI Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/clawcolab/clawbrain"
Repository = "https://github.com/clawcolab/clawbrain"

[tool.setuptools.packages.find]
where = ["."]
include = ["brain*"]
